# VisionFlow

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: verify.yml
cmake/: OnnxRuntimeDml.cmake
config/: visionflow.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  REVIEW_GUIDE.md
include/VisionFlow/capture/: capture_error.hpp  i_capture_runtime.hpp  i_capture_source.hpp
include/VisionFlow/core/: app.hpp  app_error.hpp  config.hpp  config_error.hpp  config_loader.hpp  error_domain.hpp  i_profiler.hpp  logger.hpp
include/VisionFlow/inference/: i_inference_processor.hpp  i_inference_result_store.hpp  inference_error.hpp  inference_result.hpp  inference_result_store.hpp
include/VisionFlow/input/: aim_activation_input_factory.hpp  i_aim_activation_input.hpp  i_device_scanner.hpp  i_mouse_controller.hpp  i_serial_port.hpp  makcu_controller.hpp  makcu_mouse_controller.hpp  mouse_controller_factory.hpp  mouse_error.hpp  win32_device_scanner.hpp  win32_serial_port.hpp
scripts/: build.py  deploy_assets.py  install-hooks.py  run-clang-format.py  run-clang-tidy.py
src/: main.cpp
src/capture/: capture_error.cpp  compute_pipeline.cpp  compute_pipeline.hpp  d3d11_d3d12_interop.cpp  debug_capture_processor.cpp  debug_capture_processor.hpp  dml_image_processor.cpp  frame_sequencer.cpp  frame_sequencer.hpp  i_capture_processor.hpp  inference_result_store.cpp  inference_result_store.hpp  onnx_dml_capture_processor.cpp  onnx_dml_capture_processor.hpp  onnx_dml_session.cpp  onnx_dml_session.hpp  winrt_capture_source.cpp  winrt_capture_source.hpp
src/capture/backends/dml/: compute_pipeline.cpp  d3d11_d3d12_interop.cpp  d3d11_d3d12_interop.hpp  dml_image_processor.cpp  dx_utils.hpp  onnx_dml_capture_processor.cpp  onnx_dml_capture_processor.hpp  onnx_dml_session.cpp  onnx_dml_session.hpp
src/capture/common/: inference_result.hpp
src/capture/pipeline/: capture_frame_info.hpp  frame_sequencer.cpp  frame_sequencer.hpp
src/capture/runtime/: capture_runtime_state.cpp  capture_runtime_state.hpp  capture_runtime_winrt.cpp  capture_runtime_winrt.hpp
src/capture/sources/stub/: capture_source_stub.cpp  capture_source_stub.hpp
src/capture/sources/winrt/: capture_source_winrt.cpp  capture_source_winrt.hpp  winrt_capture_frame.hpp  winrt_capture_session.cpp  winrt_capture_session.hpp  winrt_frame_sink.hpp
src/capture/winrt/: i_winrt_frame_sink.hpp  winrt_capture_source.cpp  winrt_capture_source.hpp
src/core/: app.cpp  app_composition.cpp  app_error.cpp  app_factory.cpp  config_error.cpp  config_json.hpp  config_loader.cpp  expected_utils.hpp  logger.cpp  profiler.cpp  profiler.hpp  winrt_capture_runtime.cpp  winrt_capture_runtime.hpp  winrt_platform_context.cpp
src/core/aim/: aim_controller.cpp  aim_controller.hpp
src/core/composition/: app_factory.cpp
src/core/config/: config_json.hpp  config_loader.cpp
src/core/platform/winrt/: platform_context_winrt.cpp  platform_context_winrt.hpp
src/inference/: inference_error.cpp
src/inference/api/: winrt_inference_factory.cpp  winrt_inference_factory.hpp
src/inference/backend/dml/: dml_image_processor.cpp  dml_image_processor.hpp  dml_image_processor_interop.cpp  dml_image_processor_interop.hpp  dml_image_processor_preprocess.cpp  dml_image_processor_preprocess.hpp  onnx_dml_session.cpp  onnx_dml_session.hpp  onnx_dml_session_stub.cpp
src/inference/common/: inference_frame.hpp
src/inference/composition/: winrt_inference_factory.cpp  winrt_inference_factory.hpp
src/inference/engine/: debug_inference_processor.cpp  debug_inference_processor.hpp  dml_inference_worker.cpp  dml_inference_worker.hpp  i_inference_image_processor.hpp  i_inference_session.hpp  inference_frame.hpp  inference_postprocessor.cpp  inference_postprocessor.hpp  inference_result_store.cpp  inference_result_store.hpp  onnx_dml_inference_processor.cpp  onnx_dml_inference_processor.hpp  stub_inference_processor.cpp  stub_inference_processor.hpp
src/inference/platform/dml/: compute_pipeline.cpp  d3d11_d3d12_interop.cpp  dml_image_processor.cpp  dml_image_processor.hpp  dml_image_processor_interop.cpp  dml_image_processor_preprocess.cpp  dml_image_processor_preprocess.hpp  dx_utils.hpp  onnx_dml_session.cpp  onnx_dml_session.hpp  onnx_dml_session_common.cpp  onnx_dml_session_stub.cpp  onnx_dml_session_win32_dml.cpp
src/input/: aim_activation_input_factory.cpp  makcu_controller.cpp  makcu_mouse_controller.cpp  mouse_controller_factory.cpp  mouse_error.cpp  string_utils.hpp  win32_device_scanner.cpp  win32_device_scanner.hpp  win32_serial_port.cpp  win32_serial_port.hpp  winrt_device_scanner.cpp  winrt_device_scanner.hpp  winrt_serial_port.cpp  winrt_serial_port.hpp
src/input/makcu/: makcu_ack_gate.cpp  makcu_ack_gate.hpp  makcu_command_queue.cpp  makcu_command_queue.hpp  makcu_controller_state.cpp  makcu_controller_state.hpp
src/input/platform/: aim_activation_input_stub.cpp  aim_activation_input_stub.hpp  device_scanner_winrt.cpp  device_scanner_winrt.hpp  serial_port_winrt.cpp  serial_port_winrt.hpp  winrt_aim_activation_input.cpp  winrt_aim_activation_input.hpp
src/platform/winrt/: platform_context_winrt.cpp  platform_context_winrt.hpp
tests/: CMakeLists.txt
tests/unit/capture/: capture_error_test.cpp  capture_runtime_winrt_test.cpp  capture_source_stub_test.cpp  capture_source_winrt_test.cpp  frame_sequencer_test.cpp  inference_result_store_test.cpp  onnx_dml_session_test.cpp
tests/unit/core/: aim_controller_test.cpp  app_test.cpp  config_loader_test.cpp  error_domain_contract_test.cpp  profiler_test.cpp
tests/unit/inference/: inference_error_test.cpp  inference_postprocessor_test.cpp  onnx_dml_session_test.cpp  stub_inference_processor_test.cpp
tests/unit/input/: aim_activation_input_test.cpp  makcu_controller_test.cpp  mouse_error_test.cpp
